2002-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mailto-url-popup-function-alist): New user option.
	(w3m-view-this-url-1): Don't save a window configuration for
	mailto urls here.
	(w3m-goto-mailto-url): Save a window configuration while composing
	a mail message; popup a mail window if the major-mode of a mail
	buffer matches to `w3m-mailto-url-popup-function-alist'.

2002-09-01  Andrew M. Scott  <ascott@sedona.ch.intel.com>

	* w3m-weather.el (w3m-weather-default-area): Fix typo in its
	docstring.

2002-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Provide the feature `w3m' before loading an init file or
	evaluating `w3m-load-hook'.
	Suggested by Seiichi NAMBA <sn@asahi-net.email.ne.jp>.

2002-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-alist): Share the
	regexp templates.
	(shimbun-zdnet-x-face-alist): Blur the default face.
	(shimbun-get-headers): Arrange the return value in the reverse
	order.

2002-08-28  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-alist): Add `biztrends'.

2002-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-init-file, w3m-load-hook): New option.
	(toplevel): Load `w3m-init-file' and run `w3m-load-hook'.

2002-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el: Require `custom' for Emacs 19 because of the
	function `custom-initialize-set'.

2002-08-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Clean up hook options.
	(toplevel): Define the dummy function of `w3m-update-tab-line'.
	(w3m-mode-hook, w3m-fontify-after-hook, w3m-select-buffer-hook):
	Clean up its default value to nil.
	(w3m-display-hook, w3m-delete-buffer-hook): Minimize its default
	value and use `w3m-custom-hook-initialize' as the initialize
	function.
	(w3m-arrived-setup-hook, w3m-arrived-shutdown-hook): Abolished.
	(w3m-arrived-setup-functions, w3m-arrived-shutdown-functions,
	w3m-mode-setup-functions, w3m-display-functions): New interanal